{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 139,
  "lineage": "6f94d275-0676-59c6-e05f-aeed8dc4a09b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:security-group/sg-0bf37b7c9db249057",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf37b7c9db249057",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "703131122346",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034bf78b41c874fdb",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:elastic-ip/eipalloc-034bf78b41c874fdb",
            "association_id": "eipassoc-0831a3dfc4e1d71fa",
            "domain": "vpc",
            "id": "eipalloc-034bf78b41c874fdb",
            "instance": "i-0fd6dcbcc40c92ede",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b70dcfb5b6d94681",
            "private_dns": "ip-10-0-8-190.ap-northeast-2.compute.internal",
            "private_ip": "10.0.8.190",
            "public_dns": "ec2-43-202-225-159.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.225.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion_eip"
            },
            "tags_all": {
              "Name": "bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-bastion",
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094ea74160e2bfc0f",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:elastic-ip/eipalloc-094ea74160e2bfc0f",
            "domain": "vpc",
            "id": "eipalloc-094ea74160e2bfc0f",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-57-44.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.57.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f06bb79a22ac067",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:elastic-ip/eipalloc-06f06bb79a22ac067",
            "domain": "vpc",
            "id": "eipalloc-06f06bb79a22ac067",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-79-100-197.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.100.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfabddd52dec98c7",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:instance/i-0fd6dcbcc40c92ede",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd6dcbcc40c92ede",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b70dcfb5b6d94681",
            "private_dns": "ip-10-0-8-190.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.190",
            "public_dns": "ec2-43-201-14-188.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.14.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "sample-ec2-bastion"
                },
                "tags_all": {
                  "Name": "sample-ec2-bastion"
                },
                "throughput": 0,
                "volume_id": "vol-079be11a899cd6511",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5a3a757c0b78953",
            "tags": {
              "Name": "sample-ec2-bastion"
            },
            "tags_all": {
              "Name": "sample-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027f5e0afca97979e",
              "sg-0bf37b7c9db249057"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfabddd52dec98c7",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:instance/i-006d06849bb59200a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006d06849bb59200a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d68d5028bb8b6693",
            "private_dns": "ip-10-0-74-161.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.74.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "sample-ec2-web01"
                },
                "tags_all": {
                  "Name": "sample-ec2-web01"
                },
                "throughput": 0,
                "volume_id": "vol-08dc542aa04371cbf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0480846e203c73191",
            "tags": {
              "Name": "sample-ec2-web01"
            },
            "tags_all": {
              "Name": "sample-ec2-web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf37b7c9db249057"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-web02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfabddd52dec98c7",
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:instance/i-03e8d711f026781a7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e8d711f026781a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c40c99a152acb8c6",
            "private_dns": "ip-10-0-93-150.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.93.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "sample-ec2-web02"
                },
                "tags_all": {
                  "Name": "sample-ec2-web02"
                },
                "throughput": 0,
                "volume_id": "vol-0ab60078ea6427ffd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0755a83881f0f5606",
            "tags": {
              "Name": "sample-ec2-web02"
            },
            "tags_all": {
              "Name": "sample-ec2-web02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf37b7c9db249057"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:internet-gateway/igw-01e17ea5e5679c5c0",
            "id": "igw-01e17ea5e5679c5c0",
            "owner_id": "703131122346",
            "tags": {
              "Name": "sample-igw"
            },
            "tags_all": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:loadbalancer/app/web-lb/97aa46213e231102",
            "arn_suffix": "app/web-lb/97aa46213e231102",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-1910198786.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:loadbalancer/app/web-lb/97aa46213e231102",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-062a09dccb4807cd6",
              "sg-0bf37b7c9db249057"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b150ba6eacdcfbe1"
              },
              {
                "subnet_id": "subnet-0e5a3a757c0b78953"
              }
            ],
            "subnets": [
              "subnet-0b150ba6eacdcfbe1",
              "subnet-0e5a3a757c0b78953"
            ],
            "tags": {
              "Name": "web-lb"
            },
            "tags_all": {
              "Name": "web-lb"
            },
            "vpc_id": "vpc-0debde3d766a59b8b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public01",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sample-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:listener/app/web-lb/97aa46213e231102/3581eeb38e075467",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:listener/app/web-lb/97aa46213e231102/3581eeb38e075467",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:loadbalancer/app/web-lb/97aa46213e231102",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.web-lb",
            "aws_lb_target_group.sample-tg",
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public01",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sample-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d",
            "arn_suffix": "targetgroup/sample-tg/cfc0280c3cd0798d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sample-tg"
            },
            "tags_all": {
              "Name": "sample-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sample-tg-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d-20240824073350739900000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d",
            "target_id": "i-006d06849bb59200a"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-web01",
            "aws_lb_target_group.sample-tg",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sample-tg-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d-2024082407335076190000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:703131122346:targetgroup/sample-tg/cfc0280c3cd0798d",
            "target_id": "i-03e8d711f026781a7"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-web02",
            "aws_lb_target_group.sample-tg",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094ea74160e2bfc0f",
            "association_id": "eipassoc-046e0b6ea6e47cb20",
            "connectivity_type": "public",
            "id": "nat-0bf6fa17b0cb73788",
            "network_interface_id": "eni-0a18371c162809b6f",
            "private_ip": "10.0.2.252",
            "public_ip": "15.165.57.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5a3a757c0b78953",
            "tags": {
              "Name": "sample-ngw-01"
            },
            "tags_all": {
              "Name": "sample-ngw-01"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f06bb79a22ac067",
            "association_id": "eipassoc-0045c54652d091c2d",
            "connectivity_type": "public",
            "id": "nat-0cd3692677730010b",
            "network_interface_id": "eni-074291da2d903a03e",
            "private_ip": "10.0.19.147",
            "public_ip": "52.79.100.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b150ba6eacdcfbe1",
            "tags": {
              "Name": "sample-ngw-02"
            },
            "tags_all": {
              "Name": "sample-ngw-02"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-pulic-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01e17ea5e5679c5c0",
            "id": "r-rtb-023abb7872a9e35d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-023abb7872a9e35d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-igw",
            "aws_route_table.sample-rt-public",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample_private-route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2c5a209ae4d94231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf6fa17b0cb73788",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2c5a209ae4d9423",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip01",
            "aws_nat_gateway.sample-ngw-01",
            "aws_route_table.sample-rt-private01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample_private-route02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f93f9a76c23ba541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd3692677730010b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f93f9a76c23ba54",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip02",
            "aws_nat_gateway.sample-ngw-02",
            "aws_route_table.sample-rt-private02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:route-table/rtb-0d2c5a209ae4d9423",
            "id": "rtb-0d2c5a209ae4d9423",
            "owner_id": "703131122346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-private01"
            },
            "tags_all": {
              "Name": "sample-rt-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:route-table/rtb-06f93f9a76c23ba54",
            "id": "rtb-06f93f9a76c23ba54",
            "owner_id": "703131122346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-private02"
            },
            "tags_all": {
              "Name": "sample-rt-private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:route-table/rtb-023abb7872a9e35d1",
            "id": "rtb-023abb7872a9e35d1",
            "owner_id": "703131122346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-public"
            },
            "tags_all": {
              "Name": "sample-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bcd43f2d2a0ff93",
            "route_table_id": "rtb-0d2c5a209ae4d9423",
            "subnet_id": "subnet-0480846e203c73191"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private01",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ae0f05714895e3",
            "route_table_id": "rtb-06f93f9a76c23ba54",
            "subnet_id": "subnet-0755a83881f0f5606"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private02",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025184708b00ffd15",
            "route_table_id": "rtb-023abb7872a9e35d1",
            "subnet_id": "subnet-0e5a3a757c0b78953"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aefa1e916556b6db",
            "route_table_id": "rtb-023abb7872a9e35d1",
            "subnet_id": "subnet-0b150ba6eacdcfbe1"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:security-group/sg-027f5e0afca97979e",
            "description": "for bastion Server",
            "egress": [],
            "id": "sg-027f5e0afca97979e",
            "ingress": [],
            "name": "sample-sg-bastion",
            "name_prefix": "",
            "owner_id": "703131122346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-bastion"
            },
            "tags_all": {
              "Name": "sample-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:security-group/sg-062a09dccb4807cd6",
            "description": "for load balancer",
            "egress": [],
            "id": "sg-062a09dccb4807cd6",
            "ingress": [],
            "name": "sample-sg-elb",
            "name_prefix": "",
            "owner_id": "703131122346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-elb"
            },
            "tags_all": {
              "Name": "sample-sg-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-bastion-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-2368776880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-027f5e0afca97979e",
            "security_group_rule_id": "sgr-070350ef249a0bbe0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all",
            "from_port": 0,
            "id": "sgrule-2612341759",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-062a09dccb4807cd6",
            "security_group_rule_id": "sgr-07ac749e79977405f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all http",
            "from_port": 80,
            "id": "sgrule-4242783100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-062a09dccb4807cd6",
            "security_group_rule_id": "sgr-0767215695c99c2f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample_sg-bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-896020615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027f5e0afca97979e",
            "security_group_rule_id": "sgr-00196cd3ad27b2464",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:subnet/subnet-0480846e203c73191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0480846e203c73191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703131122346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private01"
            },
            "tags_all": {
              "Name": "sample-subnet-private01"
            },
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:subnet/subnet-0755a83881f0f5606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0755a83881f0f5606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703131122346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private02"
            },
            "tags_all": {
              "Name": "sample-subnet-private02"
            },
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:subnet/subnet-0e5a3a757c0b78953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5a3a757c0b78953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703131122346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public01"
            },
            "tags_all": {
              "Name": "sample-subnet-public01"
            },
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:subnet/subnet-0b150ba6eacdcfbe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b150ba6eacdcfbe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703131122346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public02"
            },
            "tags_all": {
              "Name": "sample-subnet-public02"
            },
            "vpc_id": "vpc-0debde3d766a59b8b"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703131122346:vpc/vpc-0debde3d766a59b8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba52e681bf5acefc",
            "default_route_table_id": "rtb-0419d4f1916e469cd",
            "default_security_group_id": "sg-0bf37b7c9db249057",
            "dhcp_options_id": "dopt-0ca1eb52973ad6351",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0debde3d766a59b8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0419d4f1916e469cd",
            "owner_id": "703131122346",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}